Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -529,7 +529,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "greetings = ['hello', 'bonjour', 'hola', 'hallo', 'ciao', 'ola', 'namaste', 'salam']\n",
+    "\n",
+    "sele\n",
+    "def starts_with_h(words):\n",
+    "    selected = []\n",
+    "    for word in words:\n",
+    "        if word.startswith('h'):\n",
+    "            selected.append(word)\n",
+    "    return selected \n",
+    "\n",
+    "starts_with_h(greetings)"
+   ]
   },
   {
    "cell_type": "code",
