--- a/index.ipynb
+++ b/index.ipynb
@@ -532,15 +532,14 @@
    "source": [
     "greetings = ['hello', 'bonjour', 'hola', 'hallo', 'ciao', 'ola', 'namaste', 'salam']\n",
     "\n",
-    "sele\n",
+    "selected_1 = []\n",
     "def starts_with_h(words):\n",
-    "    selected = []\n",
     "    for word in words:\n",
     "        if word.startswith('h'):\n",
     "            selected.append(word)\n",
     "    return selected \n",
     "\n",
-    "starts_with_h(greetings)"
+    "starts_with_h(greetings)\n"
    ]
   },
   {
