Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -550,8 +550,8 @@
     "            selected_1.append(word)\n",
     "    return selected_1 \n",
     "\n",
-    "starts_with_h(greetings)\n",
-    "selected_1"
+    "print(starts_with_h(greetings))\n",
+    "print(selected_1)"
    ]
   },
   {
