--- a/index.ipynb
+++ b/index.ipynb
@@ -526,18 +526,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['hello', 'hola', 'hallo']"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hello', 'hola', 'hallo']\n",
+      "['hello', 'hola', 'hallo']\n"
+     ]
     }
    ],
    "source": [
@@ -559,7 +557,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "greetings = ['hello', 'bonjour', 'hola', 'hallo', 'ciao', 'ola', 'namaste', 'salam']\n",
+    "\n",
+    "def starts_with_h(words):\n",
+    "    selected = []\n",
+    "    for word in words:\n",
+    "        if word.startswith('h'):\n",
+    "            selected.append(word)\n",
+    "    return selected \n",
+    "\n",
+    "starts_with_h(greetings)"
+   ]
   },
   {
    "cell_type": "markdown",
