Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -561,10 +561,10 @@
     "greetings = ['hello', 'bonjour', 'hola', 'hallo', 'ciao', 'ola', 'namaste', 'salam']\n",
     "\n",
     "def starts_with_h(words):\n",
-    "    selected = []\n",
+    "    selected_2 = []\n",
     "    for word in words:\n",
     "        if word.startswith('h'):\n",
-    "            selected.append(word)\n",
+    "            selected_2.append(word)\n",
     "    return selected \n",
     "\n",
     "starts_with_h(greetings)"
