--- a/index.ipynb
+++ b/index.ipynb
@@ -565,9 +565,10 @@
     "    for word in words:\n",
     "        if word.startswith('h'):\n",
     "            selected_2.append(word)\n",
-    "    return selected \n",
+    "    return selected_2 \n",
     "\n",
-    "starts_with_h(greetings)"
+    "print(starts_with_h(greetings))\n",
+    "print(selec)\n"
    ]
   },
   {
